added all cards

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             ><img class="h-[24px]" src="assets/coin.png" alt="" />
           </button>
           <button class="btn bg-[#00a63e] text-white rounded-full">
-            <span>0</span>Copy
+            <span id="copy-stored">0</span>Copy
           </button>
         </div>
       </nav>
@@ -58,7 +58,7 @@
       </div>
     </header>
     <main class="grid grid-cols-12 gap-5 max-w-[1240px] mx-auto mt-[50px]">
-      <div id="card-container" class="col-span-9 grid grid-cols-3">
+      <div id="card-container" class="col-span-9 grid grid-cols-3 gap-3">
         <div id="card-1" class="bg-white p-[22px] shadow-md rounded-xl">
           <div>
             <div class="flex items-center justify-between">
@@ -87,6 +87,234 @@
             </button>
           </div>
         </div>
+        <div id="card-2" class="bg-white p-[22px] shadow-md rounded-xl">
+          <div>
+            <div class="flex items-center justify-between">
+              <div class="bg-[#ffe3e2] rounded-2xl p-5">
+                <img
+                  class="h-[32px] w-[32px]"
+                  src="assets/fire-service.png"
+                  alt=""
+                />
+              </div>
+              <i onclick="clickHeart()" class="fa-regular fa-heart text-2xl text-[#5c5c5c]"></i>
+            </div>
+            <h2 class="font-bold text-[18px]">Fire Service Number</h2>
+            <p class="text-[#5c5c5c]">Fire Service</p>
+            <h1 class="font-bold text-[30px]">999</h1>
+            <button class="btn bg-[#f2f2f2] rounded-full text-[#5c5c5c]">
+              Fire
+            </button>
+          </div>
+          <div class="flex gap-2 mt-3">
+            <button class="btn rounded-xl w-[48%]">
+              <i class="fa-regular fa-copy"></i> Copy
+            </button>
+            <button class="call-btn btn rounded-xl bg-[#00a63e] text-white w-[48%]">
+              <i class="fa-solid fa-phone font-light"></i> Call
+            </button>
+          </div>
+        </div>
+        <div id="card-3" class="bg-white p-[22px] shadow-md rounded-xl">
+          <div>
+            <div class="flex items-center justify-between">
+              <div class="bg-[#ffe3e2] rounded-2xl p-5">
+                <img
+                  class="h-[32px] w-[32px]"
+                  src="assets/fire-service.png"
+                  alt=""
+                />
+              </div>
+              <i onclick="clickHeart()" class="fa-regular fa-heart text-2xl text-[#5c5c5c]"></i>
+            </div>
+            <h2 class="font-bold text-[18px]">Fire Service Number</h2>
+            <p class="text-[#5c5c5c]">Fire Service</p>
+            <h1 class="font-bold text-[30px]">999</h1>
+            <button class="btn bg-[#f2f2f2] rounded-full text-[#5c5c5c]">
+              Fire
+            </button>
+          </div>
+          <div class="flex gap-2 mt-3">
+            <button class="btn rounded-xl w-[48%]">
+              <i class="fa-regular fa-copy"></i> Copy
+            </button>
+            <button class="call-btn btn rounded-xl bg-[#00a63e] text-white w-[48%]">
+              <i class="fa-solid fa-phone font-light"></i> Call
+            </button>
+          </div>
+        </div>
+        <div id="card-4" class="bg-white p-[22px] shadow-md rounded-xl">
+          <div>
+            <div class="flex items-center justify-between">
+              <div class="bg-[#ffe3e2] rounded-2xl p-5">
+                <img
+                  class="h-[32px] w-[32px]"
+                  src="assets/fire-service.png"
+                  alt=""
+                />
+              </div>
+              <i onclick="clickHeart()" class="fa-regular fa-heart text-2xl text-[#5c5c5c]"></i>
+            </div>
+            <h2 class="font-bold text-[18px]">Fire Service Number</h2>
+            <p class="text-[#5c5c5c]">Fire Service</p>
+            <h1 class="font-bold text-[30px]">999</h1>
+            <button class="btn bg-[#f2f2f2] rounded-full text-[#5c5c5c]">
+              Fire
+            </button>
+          </div>
+          <div class="flex gap-2 mt-3">
+            <button class="btn rounded-xl w-[48%]">
+              <i class="fa-regular fa-copy"></i> Copy
+            </button>
+            <button class="call-btn btn rounded-xl bg-[#00a63e] text-white w-[48%]">
+              <i class="fa-solid fa-phone font-light"></i> Call
+            </button>
+          </div>
+        </div>
+        <div id="card-5" class="bg-white p-[22px] shadow-md rounded-xl">
+          <div>
+            <div class="flex items-center justify-between">
+              <div class="bg-[#ffe3e2] rounded-2xl p-5">
+                <img
+                  class="h-[32px] w-[32px]"
+                  src="assets/fire-service.png"
+                  alt=""
+                />
+              </div>
+              <i onclick="clickHeart()" class="fa-regular fa-heart text-2xl text-[#5c5c5c]"></i>
+            </div>
+            <h2 class="font-bold text-[18px]">Fire Service Number</h2>
+            <p class="text-[#5c5c5c]">Fire Service</p>
+            <h1 class="font-bold text-[30px]">999</h1>
+            <button class="btn bg-[#f2f2f2] rounded-full text-[#5c5c5c]">
+              Fire
+            </button>
+          </div>
+          <div class="flex gap-2 mt-3">
+            <button class="btn rounded-xl w-[48%]">
+              <i class="fa-regular fa-copy"></i> Copy
+            </button>
+            <button class="call-btn btn rounded-xl bg-[#00a63e] text-white w-[48%]">
+              <i class="fa-solid fa-phone font-light"></i> Call
+            </button>
+          </div>
+        </div>
+        <div id="card-6" class="bg-white p-[22px] shadow-md rounded-xl">
+          <div>
+            <div class="flex items-center justify-between">
+              <div class="bg-[#ffe3e2] rounded-2xl p-5">
+                <img
+                  class="h-[32px] w-[32px]"
+                  src="assets/fire-service.png"
+                  alt=""
+                />
+              </div>
+              <i onclick="clickHeart()" class="fa-regular fa-heart text-2xl text-[#5c5c5c]"></i>
+            </div>
+            <h2 class="font-bold text-[18px]">Fire Service Number</h2>
+            <p class="text-[#5c5c5c]">Fire Service</p>
+            <h1 class="font-bold text-[30px]">999</h1>
+            <button class="btn bg-[#f2f2f2] rounded-full text-[#5c5c5c]">
+              Fire
+            </button>
+          </div>
+          <div class="flex gap-2 mt-3">
+            <button class="btn rounded-xl w-[48%]">
+              <i class="fa-regular fa-copy"></i> Copy
+            </button>
+            <button class="call-btn btn rounded-xl bg-[#00a63e] text-white w-[48%]">
+              <i class="fa-solid fa-phone font-light"></i> Call
+            </button>
+          </div>
+        </div>
+        <div id="card-7" class="bg-white p-[22px] shadow-md rounded-xl">
+          <div>
+            <div class="flex items-center justify-between">
+              <div class="bg-[#ffe3e2] rounded-2xl p-5">
+                <img
+                  class="h-[32px] w-[32px]"
+                  src="assets/fire-service.png"
+                  alt=""
+                />
+              </div>
+              <i onclick="clickHeart()" class="fa-regular fa-heart text-2xl text-[#5c5c5c]"></i>
+            </div>
+            <h2 class="font-bold text-[18px]">Fire Service Number</h2>
+            <p class="text-[#5c5c5c]">Fire Service</p>
+            <h1 class="font-bold text-[30px]">999</h1>
+            <button class="btn bg-[#f2f2f2] rounded-full text-[#5c5c5c]">
+              Fire
+            </button>
+          </div>
+          <div class="flex gap-2 mt-3">
+            <button class="btn rounded-xl w-[48%]">
+              <i class="fa-regular fa-copy"></i> Copy
+            </button>
+            <button class="call-btn btn rounded-xl bg-[#00a63e] text-white w-[48%]">
+              <i class="fa-solid fa-phone font-light"></i> Call
+            </button>
+          </div>
+        </div>
+        <div id="card-8" class="bg-white p-[22px] shadow-md rounded-xl">
+          <div>
+            <div class="flex items-center justify-between">
+              <div class="bg-[#ffe3e2] rounded-2xl p-5">
+                <img
+                  class="h-[32px] w-[32px]"
+                  src="assets/fire-service.png"
+                  alt=""
+                />
+              </div>
+              <i onclick="clickHeart()" class="fa-regular fa-heart text-2xl text-[#5c5c5c]"></i>
+            </div>
+            <h2 class="font-bold text-[18px]">Fire Service Number</h2>
+            <p class="text-[#5c5c5c]">Fire Service</p>
+            <h1 class="font-bold text-[30px]">999</h1>
+            <button class="btn bg-[#f2f2f2] rounded-full text-[#5c5c5c]">
+              Fire
+            </button>
+          </div>
+          <div class="flex gap-2 mt-3">
+            <button class="btn rounded-xl w-[48%]">
+              <i class="fa-regular fa-copy"></i> Copy
+            </button>
+            <button class="call-btn btn rounded-xl bg-[#00a63e] text-white w-[48%]">
+              <i class="fa-solid fa-phone font-light"></i> Call
+            </button>
+          </div>
+        </div>
+        <div id="card-9" class="bg-white p-[22px] shadow-md rounded-xl">
+          <div>
+            <div class="flex items-center justify-between">
+              <div class="bg-[#ffe3e2] rounded-2xl p-5">
+                <img
+                  class="h-[32px] w-[32px]"
+                  src="assets/fire-service.png"
+                  alt=""
+                />
+              </div>
+              <i onclick="clickHeart()" class="fa-regular fa-heart text-2xl text-[#5c5c5c]"></i>
+            </div>
+            <h2 class="font-bold text-[18px]">Fire Service Number</h2>
+            <p class="text-[#5c5c5c]">Fire Service</p>
+            <h1 class="font-bold text-[30px]">999</h1>
+            <button class="btn bg-[#f2f2f2] rounded-full text-[#5c5c5c]">
+              Fire
+            </button>
+          </div>
+          <div class="flex gap-2 mt-3">
+            <button class="btn rounded-xl w-[48%]">
+              <i class="fa-regular fa-copy"></i> Copy
+            </button>
+            <button class="call-btn btn rounded-xl bg-[#00a63e] text-white w-[48%]">
+              <i class="fa-solid fa-phone font-light"></i> Call
+            </button>
+          </div>
+        </div>
+        
+
+
+
       </div>
       <div class="bg-white p-[16px] shadow-md rounded-xl col-span-3">
         <div class="flex items-center justify-between mb-3">
