--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- tailwind css cdn -->
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
   </head>
-  <body class="bg-[#f5fff6]">
+  <body class="bg-[#f5fff6] pb-9">
     <header>
       <nav
         class="bg-white flex items-center justify-between max-w-[1800px] mx-auto"
@@ -62,20 +62,20 @@
         <div id="card-1" class="bg-white p-[22px] shadow-md rounded-xl">
           <div>
             <div class="flex items-center justify-between">
-              <div class="bg-[#ffe3e2] rounded-2xl p-5">
+              <div class="bg-[#ffe3e2] rounded-2xl p-3">
                 <img
-                  class="h-[32px] w-[32px]"
-                  src="assets/fire-service.png"
+                  class="h-[28px] w-[28px]"
+                  src="assets/emergency.png"
                   alt=""
                 />
               </div>
               <i onclick="clickHeart()" class="fa-regular fa-heart text-2xl text-[#5c5c5c]"></i>
             </div>
-            <h2 class="font-bold text-[18px]">Fire Service Number</h2>
-            <p class="text-[#5c5c5c]">Fire Service</p>
+            <h2 class="font-bold text-[18px]">National Emergency Number</h2>
+            <p class="text-[#5c5c5c]">National Emergency</p>
             <h1 class="font-bold text-[30px]">999</h1>
             <button class="btn bg-[#f2f2f2] rounded-full text-[#5c5c5c]">
-              Fire
+              All
             </button>
           </div>
           <div class="flex gap-2 mt-3">
@@ -90,20 +90,20 @@
         <div id="card-2" class="bg-white p-[22px] shadow-md rounded-xl">
           <div>
             <div class="flex items-center justify-between">
-              <div class="bg-[#ffe3e2] rounded-2xl p-5">
+              <div class="bg-[#ffe3e2] rounded-2xl p-3">
                 <img
-                  class="h-[32px] w-[32px]"
-                  src="assets/fire-service.png"
+                  class="h-[28px] w-[28px]"
+                  src="assets/police.png"
                   alt=""
                 />
               </div>
               <i onclick="clickHeart()" class="fa-regular fa-heart text-2xl text-[#5c5c5c]"></i>
             </div>
-            <h2 class="font-bold text-[18px]">Fire Service Number</h2>
-            <p class="text-[#5c5c5c]">Fire Service</p>
+            <h2 class="font-bold text-[18px]">Police Helpline Number</h2>
+            <p class="text-[#5c5c5c]">Police</p>
             <h1 class="font-bold text-[30px]">999</h1>
             <button class="btn bg-[#f2f2f2] rounded-full text-[#5c5c5c]">
-              Fire
+              Police
             </button>
           </div>
           <div class="flex gap-2 mt-3">
@@ -118,9 +118,9 @@
         <div id="card-3" class="bg-white p-[22px] shadow-md rounded-xl">
           <div>
             <div class="flex items-center justify-between">
-              <div class="bg-[#ffe3e2] rounded-2xl p-5">
+              <div class="bg-[#ffe3e2] rounded-2xl p-3">
                 <img
-                  class="h-[32px] w-[32px]"
+                  class="h-[28px] w-[28px]"
                   src="assets/fire-service.png"
                   alt=""
                 />
@@ -146,20 +146,20 @@
         <div id="card-4" class="bg-white p-[22px] shadow-md rounded-xl">
           <div>
             <div class="flex items-center justify-between">
-              <div class="bg-[#ffe3e2] rounded-2xl p-5">
+              <div class="bg-[#ffe3e2] rounded-2xl p-3">
                 <img
-                  class="h-[32px] w-[32px]"
-                  src="assets/fire-service.png"
+                  class="h-[28px] w-[28px]"
+                  src="assets/ambulance.png"
                   alt=""
                 />
               </div>
               <i onclick="clickHeart()" class="fa-regular fa-heart text-2xl text-[#5c5c5c]"></i>
             </div>
-            <h2 class="font-bold text-[18px]">Fire Service Number</h2>
-            <p class="text-[#5c5c5c]">Fire Service</p>
-            <h1 class="font-bold text-[30px]">999</h1>
+            <h2 class="font-bold text-[18px]">Ambulance Service</h2>
+            <p class="text-[#5c5c5c]">Ambulance</p>
+            <h1 class="font-bold text-[30px]">1994-999999</h1>
             <button class="btn bg-[#f2f2f2] rounded-full text-[#5c5c5c]">
-              Fire
+              Health
             </button>
           </div>
           <div class="flex gap-2 mt-3">
@@ -174,20 +174,20 @@
         <div id="card-5" class="bg-white p-[22px] shadow-md rounded-xl">
           <div>
             <div class="flex items-center justify-between">
-              <div class="bg-[#ffe3e2] rounded-2xl p-5">
+              <div class="bg-[#ffe3e2] rounded-2xl p-3">
                 <img
-                  class="h-[32px] w-[32px]"
-                  src="assets/fire-service.png"
+                  class="h-[28px] w-[28px]"
+                  src="assets/emergency.png"
                   alt=""
                 />
               </div>
               <i onclick="clickHeart()" class="fa-regular fa-heart text-2xl text-[#5c5c5c]"></i>
             </div>
-            <h2 class="font-bold text-[18px]">Fire Service Number</h2>
-            <p class="text-[#5c5c5c]">Fire Service</p>
-            <h1 class="font-bold text-[30px]">999</h1>
+            <h2 class="font-bold text-[18px]">Women & Child Helpline</h2>
+            <p class="text-[#5c5c5c]">Women & Child Helpline</p>
+            <h1 class="font-bold text-[30px]">109</h1>
             <button class="btn bg-[#f2f2f2] rounded-full text-[#5c5c5c]">
-              Fire
+              Help
             </button>
           </div>
           <div class="flex gap-2 mt-3">
@@ -202,20 +202,20 @@
         <div id="card-6" class="bg-white p-[22px] shadow-md rounded-xl">
           <div>
             <div class="flex items-center justify-between">
-              <div class="bg-[#ffe3e2] rounded-2xl p-5">
+              <div class="bg-[#ffe3e2] rounded-2xl p-3">
                 <img
-                  class="h-[32px] w-[32px]"
-                  src="assets/fire-service.png"
+                  class="h-[28px] w-[28px]"
+                  src="assets/emergency.png"
                   alt=""
                 />
               </div>
               <i onclick="clickHeart()" class="fa-regular fa-heart text-2xl text-[#5c5c5c]"></i>
             </div>
-            <h2 class="font-bold text-[18px]">Fire Service Number</h2>
-            <p class="text-[#5c5c5c]">Fire Service</p>
-            <h1 class="font-bold text-[30px]">999</h1>
+            <h2 class="font-bold text-[18px]">Anti-Corruption Helpline</h2>
+            <p class="text-[#5c5c5c]">Anti-Corruption</p>
+            <h1 class="font-bold text-[30px]">106</h1>
             <button class="btn bg-[#f2f2f2] rounded-full text-[#5c5c5c]">
-              Fire
+              Govt.
             </button>
           </div>
           <div class="flex gap-2 mt-3">
@@ -230,20 +230,20 @@
         <div id="card-7" class="bg-white p-[22px] shadow-md rounded-xl">
           <div>
             <div class="flex items-center justify-between">
-              <div class="bg-[#ffe3e2] rounded-2xl p-5">
+              <div class="bg-[#ffe3e2] rounded-2xl p-3">
                 <img
-                  class="h-[32px] w-[32px]"
-                  src="assets/fire-service.png"
+                  class="h-[28px] w-[28px]"
+                  src="assets/emergency.png"
                   alt=""
                 />
               </div>
               <i onclick="clickHeart()" class="fa-regular fa-heart text-2xl text-[#5c5c5c]"></i>
             </div>
-            <h2 class="font-bold text-[18px]">Fire Service Number</h2>
-            <p class="text-[#5c5c5c]">Fire Service</p>
-            <h1 class="font-bold text-[30px]">999</h1>
+            <h2 class="font-bold text-[18px]">Electricity Helpline</h2>
+            <p class="text-[#5c5c5c]">Electricity Outage</p>
+            <h1 class="font-bold text-[30px]">16216</h1>
             <button class="btn bg-[#f2f2f2] rounded-full text-[#5c5c5c]">
-              Fire
+              Electricity
             </button>
           </div>
           <div class="flex gap-2 mt-3">
@@ -258,20 +258,20 @@
         <div id="card-8" class="bg-white p-[22px] shadow-md rounded-xl">
           <div>
             <div class="flex items-center justify-between">
-              <div class="bg-[#ffe3e2] rounded-2xl p-5">
+              <div class="bg-[#ffe3e2] rounded-2xl p-3">
                 <img
-                  class="h-[32px] w-[32px]"
-                  src="assets/fire-service.png"
+                  class="h-[28px] w-[28px]"
+                  src="assets/emergency.png"
                   alt=""
                 />
               </div>
               <i onclick="clickHeart()" class="fa-regular fa-heart text-2xl text-[#5c5c5c]"></i>
             </div>
-            <h2 class="font-bold text-[18px]">Fire Service Number</h2>
-            <p class="text-[#5c5c5c]">Fire Service</p>
-            <h1 class="font-bold text-[30px]">999</h1>
+            <h2 class="font-bold text-[18px]">Consumer Rights Helpline</h2>
+            <p class="text-[#5c5c5c]">Monitoring</p>
+            <h1 class="font-bold text-[30px]">16121</h1>
             <button class="btn bg-[#f2f2f2] rounded-full text-[#5c5c5c]">
-              Fire
+              Govt.
             </button>
           </div>
           <div class="flex gap-2 mt-3">
@@ -286,20 +286,20 @@
         <div id="card-9" class="bg-white p-[22px] shadow-md rounded-xl">
           <div>
             <div class="flex items-center justify-between">
-              <div class="bg-[#ffe3e2] rounded-2xl p-5">
+              <div class="bg-[#ffe3e2] rounded-2xl p-3">
                 <img
-                  class="h-[32px] w-[32px]"
-                  src="assets/fire-service.png"
+                  class="h-[28px] w-[28px]"
+                  src="assets/emergency.png"
                   alt=""
                 />
               </div>
               <i onclick="clickHeart()" class="fa-regular fa-heart text-2xl text-[#5c5c5c]"></i>
             </div>
-            <h2 class="font-bold text-[18px]">Fire Service Number</h2>
-            <p class="text-[#5c5c5c]">Fire Service</p>
-            <h1 class="font-bold text-[30px]">999</h1>
+            <h2 class="font-bold text-[18px]">Bangladesh Railway Helpline </h2>
+            <p class="text-[#5c5c5c]">Bangladesh Railway</p>
+            <h1 class="font-bold text-[30px]">163</h1>
             <button class="btn bg-[#f2f2f2] rounded-full text-[#5c5c5c]">
-              Fire
+              Travel
             </button>
           </div>
           <div class="flex gap-2 mt-3">
