--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <body class="bg-[#f5fff6] pb-9">
     <header>
       <nav
-        class="bg-white flex items-center justify-between max-w-[1240px] mx-auto"
+        class="bg-white flex flex-col md:flex-row items-center justify-between max-w-[1240px] mx-auto"
       >
         <div class="flex items-center gap-2">
           <img class="h-[50px]" src="assets/logo.png" alt="" />
@@ -57,8 +57,8 @@
         </p>
       </div>
     </header>
-    <main class="grid grid-cols-12 gap-5 max-w-[1240px] mx-auto mt-[50px]">
-      <div id="card-container" class="col-span-9 grid grid-cols-3 gap-3">
+    <main class="grid grid-cols-1 md:grid-cols-12 gap-5 max-w-[1240px] mx-auto mt-[50px]">
+      <div id="card-container" class="col-span-9 grid grid-col-1 md:grid-cols-3 gap-3">
         <div id="card-1" class="bg-white p-[22px] shadow-md rounded-xl">
           <div>
             <div class="flex items-center justify-between">
